# ss13_blackbox_tools

./: .gitignore  7.6  LOCAL_randomized_spawners-Copy1.ipynb  LOCAL_randomized_spawners.ipynb  README.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5-Copy1.ipynb  Untitled5.ipynb  Untitled6.ipynb  Untitled7.ipynb  Untitled8.ipynb  __biohazard_winrate.ipynb  __emerald_mapvote_percentage.ipynb  __job_preferences.ipynb  __ruin_frequency-change_2.ipynb  __ruin_frequency.ipynb  __salvage.ipynb  __vampire_subclass_choices.ipynb  antag_winrate_maps.ipynb  blackbox.py  blackbox_walker.py  blobstuff.ipynb  cargo_orders.ipynb  depot_loots.ipynb  elite_winloss_rate.ipynb  escape_shuttle_orders.ipynb  generate_blackbox_constants.py  ghost_spawns.ipynb  graph_practice.ipynb  holoparasite_trends.ipynb  incursion_tm.ipynb  job_prefs.ipynb  lavaland_ore_rarity.ipynb  lavaland_spawn_rates.ipynb  map_votes.csv  mindflayer_abilities.ipynb  (+25 more)
examples/: lavaland_rarity.py
ss13tools/: feedback.py  model.py  settings.py
ss13tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tasks/: update_profilesamples.py  update_roundstats.py
