[project]
name = "analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "paralysis",
    "pillow>=11.3.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.42",
    "toml>=0.10.2",
    "typed-settings>=25.0.0",
]

[dependency-groups]
dev = [
    "llvmlite>=0.44.0",
]

[tool.uv.sources]
paralysis = { git = "https://github.com/warriorstar-orion/paralysis" }
